# clinical-data-etl-processor

./: .gitignore  README.md  config.py  main.py  pyproject.toml
docs/: requirements.md
scripts/: extract.py  load.py  transform.py
tests/: conftest.py  test_extract.py  test_load.py  test_main.py  test_transform.py
